* add level tests (+fix player position) * refactor mask & level methods to C-like style

--- a/timus/task1589/Makefile
+++ b/timus/task1589/Makefile
@@ -12,7 +12,7 @@ TESTS = unittests
 
 SRC = level.cpp
 EXEC_SRC = main.cpp
-TESTS_SRC = test_mask.cpp
+TESTS_SRC = $(wildcard test_*.cpp)
 HEADERS = $(wildcard *.h)
 
 GTEST_HEADERS = $(GTEST_DIR)/include/gtest/*.h \
